Fixed overflow issue in SocialMedia component

--- a/src/components/AboutMe.module.css
+++ b/src/components/AboutMe.module.css
@@ -1,10 +1,12 @@
 .skills {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
 .skills__row {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
 }
@@ -29,6 +31,7 @@
     opacity: 0;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
@@ -194,6 +197,7 @@
 
 .centerDiv {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     height: 100vh;
